
[package]
name = "ceres-dsp"
version = "0.0.5"
edition = "2021"
description = "A modular digital signal processing framework for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MoofSoup/ceres-dsp"
keywords = ["dsp", "audio", "signal-processing", "synthesis", "modular"]
categories = ["multimedia::audio", "science"]
readme = "README.md"

[lib]
name = "ceres_dsp"

[dependencies]
ceres-macros = { path = "./ceres-macros", version = "0.0.5" }

[dev-dependencies]
# None for now

[workspace]
members = [".", "ceres-macros"]
resolver = "2"

