
[package]
name = "ceres-dsp"
version = "0.0.7"
edition = "2021"
description = "A modular digital signal processing framework for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MoofSoup/ceres-dsp"
keywords = ["dsp", "audio", "signal-processing", "synthesis", "modular"]
categories = ["multimedia::audio", "science"]
readme = "README.md"

[lib]
name = "ceres"

[dependencies]
ceres-macros = { path = "./ceres-macros", version = "0.0.6" }
crossbeam = "0.8.4"
cpal = "0.15"

[dev-dependencies]
# None for now

[workspace]
members = [".", "ceres-macros"]
resolver = "2"

